--- a/templates/createDinner.html
+++ b/templates/createDinner.html
@@ -6,7 +6,7 @@
         Tittel:<br>
         <input type="text" name="dinner_title" required><br>
         Gruppe ID:<br>
-        <input type="number" name="group_id" required><br>
+        <input type="number" name="group_id" value="{{ group_id }}" readonly><br>
         Bilde:<br>
         <input type="file" name="dinner_image" accept="image/*"><br>
         <br>
