--- a/templates/createMeal.html
+++ b/templates/createMeal.html
@@ -9,7 +9,7 @@
                         class="calendar__button"
                         type="submit"
                         name="choose_dinner"
-                        value="{{ [dinner[0], inc_year, inc_month, inc_day] }}"
+                        value="{{ [dinner[0], inc_year, inc_month, inc_day, group_id] }}"
                         >
                         Velg
                     </button>
