--- a/static/styles.css
+++ b/static/styles.css
@@ -603,11 +603,14 @@ dropdownIngredientlabel {
   color: #ffffff;
   text-align: left;
   font-weight: bold;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .report-table th,
 .report-table td {
   padding: 12px 15px;
+  
 }
 
 .report-table tbody tr {
