--- a/static/styles.css
+++ b/static/styles.css
@@ -630,6 +630,7 @@ dropdownIngredientlabel {
   color: #009879;
 }
 
+/*Muhmad sin- Rapport test only*/
 .heading_table{
   border-collapse: collapse;
   box-shadow: 0 5px 10px #f9fbff;
