--- a/templates/report_result.html
+++ b/templates/report_result.html
@@ -23,7 +23,7 @@
   {% for row in data1 %}
   <tr class="active-row">
     {% for cell in row %}
-    <td>{{ cell }}</td>
+    <td>KR: {{ cell }}</td>
     {% endfor %}
   </tr>
   {% endfor %}
