--- a/static/styles.css
+++ b/static/styles.css
@@ -244,6 +244,7 @@ div.dinnerdiv {
   top: 30px;
   flex: 1;
   margin-right: 2rem;
+  margin-bottom: 2rem;
 }
 
 div.dinnerdiv1 {
@@ -731,7 +732,6 @@ h3 {
   font-size: var(--fs-400);
   padding: .1rem .1rem;
   border-radius: 0.5rem;
-  border: solid white;
   box-shadow: 1.5rem 2.75rem 2rem -2rem hsl(var(--clr-secondary-400) / 0.25);
 }
 
@@ -812,7 +812,8 @@ div.inner {
 }
 div.inner img {
     position: relative;
-    border-radius: 1%;
+    border: solid white;
+    border-radius: .5%;
     /*left:-50%;*/
 }
 
@@ -886,9 +887,13 @@ h2.headline {
 .main_title {
   width: 100%;
   margin: 0 auto;
-  padding: 15px;
+  padding: 1rem;
   text-align: center;
   background-color: #ecfbff;
+}
+#title-bg-white {
+  height: 8vh;
+  background-color: white;
 }
 
 .dinner-bg-color {
@@ -972,6 +977,30 @@ div.dinner img {
 .button-three:active {
   background-color: #bef5ff;
   color: black;
+}
+
+.section {
+
+}
+
+.grid-container {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(4, 25%);
+
+  padding-block: 3rem;
+  width: min(95%, 70rem);
+  margin-inline: auto;
+
+}
+
+.grid-column {
+  overflow: hidden;
+  font-size: .6vw;
+  border-radius: 0.5rem;
+  border: solid #ffffff;
+  background-color: #ffffff;
+  box-shadow: 1.5rem 2.75rem 2rem -2rem hsl(var(--clr-secondary-400) / 0.25);
 }
 
 /*Muhmad sin- Rapport*/
