--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -2,9 +2,10 @@
 <h1 class="calendar__h1">{{ group_name }} Kalender</h1>
 <h2 class="calendar__h2">{{ month_name }} {{ year }}</h2>
 <h2 class="calendar__h2">
+<div class="btn-group">
   <form class="calendar__form" method="POST">
     <button
-      class="calendar__button"
+      class="btn btn-info"
       type="submit"
       name="prev_month"
       value="{{  [year, month - 1]  }}"
@@ -12,7 +13,7 @@
       Forrige måned
     </button>
     <button
-      class="calendar__button"
+      class="btn btn-info"
       type="submit"
       name="next_month"
       value="{{  [year, month + 1]  }}"
