--- a/static/styles.css
+++ b/static/styles.css
@@ -466,6 +466,21 @@ dropdownIngredientlabel {
 
 /*Jonnis sin*/
 
+.login input[type="number"] {
+  border: 0;
+  background: none;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #3498db;
+  padding: 14px 10px;
+  width: 200px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  transition: 0.25s;
+}
+
 #grouploop {
   height: 300px;
   width: 300px;
