--- a/templates/dinners/dinner.html
+++ b/templates/dinners/dinner.html
@@ -45,12 +45,12 @@
 
         <div class="dinner-btn-group">
             <a
-            href="{{ url_for('recipe_route.showChangesRecipe', dinner_id=dinner_id) }}">
+            href="{{ url_for('recipe_route.show_changes_recipe', dinner_id=dinner_id) }}">
              <button class="button-three">Vis endringer i oppskrift</button>
          </a>
 
          <a
-               href="{{ url_for('recipe_route.changeRecipe', dinner_id=dinner_id, group_id=group_id) }}">
+               href="{{ url_for('recipe_route.change_recipe', dinner_id=dinner_id, group_id=group_id) }}">
                 <button class="button-three">Endre oppskrift</button>
             </a>
             </div>
