Har lagt inn maga sin personvern

--- a/templates/base.html
+++ b/templates/base.html
@@ -104,7 +104,7 @@
             >
           </li>
           <li>
-            <a href="{{ url_for('usersroute.privacy') }}"
+            <a href="{{ url_for('usersroute.terms_of_use') }}"
               ><span><i class="uil uil-clipboard-notes"></i></span>Vilkår for
               bruk</a
             >
