--- a/templates/info/privacy.html
+++ b/templates/info/privacy.html
@@ -7,101 +7,33 @@ content %}
 <div class="center-grid">
   <div class="horizontal-grid">
   <article class="privacy-article">
-    <h1>Vilkår for bruk</h1>
-    <h2 id="1">1. Litt om oss</h2>
+    <h1>Personvern</h1>
+    <h2 id="1">1. Personvernsrapport </h2>
     <p>
-      Nettsiden vår drives av Morild data BA. Her kan lage din egen profil, se
-      menyen til rettene restaurant har å tilby, lagre favorittrettene dine, lag
-      din egen privat gruppe, med familie eller venner, legge inn dine egne
-      oppskrifter og dele dem privat med de i gruppen din. Du kan også
-      kommentere på oppskrifter og retter til restauranten og i din private
-      gruppe.
+     Hos MatMons bryr vi oss om personvernet til de som bruker nettstedet vårt.
+        Vi har laget denne personvernerklæringen for å forklare hvordan vi, som behandlingsansvarlige,
+        samler inn, lagrer og bruker personopplysningene dine, og rettighetene du har som bruker av nettsiden vår.
     </p>
-    <h2 id="2">2. Vilkår</h2>
+    <h2 id="2">2. Personopplysningers behandling, og hvorfor</h2>
     <p>
-      Disse vilkårene og betingelsene regulerer bruken av tjenestene på
-      nettstedet vårt. Hvis du bruker tjenesten, forutsettes det at du har lest,
-      forstått og akseptert vilkårene i avtalen. Vår nettside krever retten til
-      å endre vilkårene når som helst uten varsel. Dersom endring i
-      bruksvilkårene vil du bli varslet og vil trer i kraft fra tiden etter
-      varselet. Det er brukerens ansvar å overholde gjeldende vilkår og
-      betingelser til enhver tid.
+        Som en del av driften av tjenestene våre kan vi be om å samle inn og lagre personlig informasjon som brukernavn, oppskrifter, e-postadresser og handleliste ettersom de er tjenesterelaterte.
+
+        Personopplysninger behandles utelukkende med det formål å administrere tjenestene vi leverer og utføre de oppgavene brukeren ønsker. Informasjonen vil ikke bli brukt eller utlevert til andre formål, inkludert markedsføring, med mindre du uttrykkelig har samtykket til dette, for eksempel i form av abonnement på nyhetsbrev eller tjenester, annen meldingstjeneste eller SMS. Du kan selv velge å trekke tilbake dette samtykket når som helst.
+
+        Vi oppfordrer brukere av plattformen vår til ikke å legge inn eller dele personlig informasjon som navn, alder, kjønn, legning, religion, helse, etc. i kommentarfeltet, i samtale med oss eller noen andre plasser på nettsiden vår.
     </p>
-    <h2 id="3">3. Tjenestebeskrivelse</h2>
+    <h2 id="3">3. Tilgang og offentliggjøring av informasjon</h2>
     <p>
-      Vår nettside tilbyr brukere muligheten til å lage sine egne profiler,
-      oppskrifter og grupper. Det er også tilgang til verktøy for å laste opp
-      bilder, redigere profiler, grupper, oppskrifter og andre funksjoner. Lage
-      handlelister og legge inn kommentarer.
+      Det er kun våre tekniske leverandører som har tilgang til personlig identifiserbar informasjon lagret om deg og kun i den grad slik tilgang er nødvendig for utvikling og drift og vedlikehold av tjenesten. Informasjon utleveres ikke til tredjeparter, bortsett fra underleverandører som bistår oss med å utføre tjenestene.
     </p>
-    <h3 id="3.1">3.1 Oppretting av brukerkonto</h3>
+    <h2 id="4">4. Informasjon og tilgang</h2>
     <p>
-      For å opprette brukerkonto må du først oppgi visse opplysninger og etter
-      at du oppretter en brukerkonto vil du få tilgang til alle funksjonene til
-      nettsiden. Når du oppretter en brukerkonto, godtar du å gi riktig
-      brukerinformasjon, oppdatere brukerinformasjon hvis du redigerer eller
-      lagt inn feilinformasjon. Og om vi mistenker at du har oppgitt feil
-      informasjon, vil vi ha retten til å nekte deg tilgang til tjenesten
-      og/eller fjerne innhold ditt.
+      Som bruker av nettsiden vår har du rett til innsyn i personopplysningene vi behandler om deg. Videre har du rett til å korrigere ufullstendige eller unøyaktige opplysninger og/eller slette dem.
     </p>
-    <h2 id="4">4. Sikkerhet</h2>
+    <h2 id="5">5. Kontakt</h2>
     <p>
-      Du er alene ansvarlig for sikkerheten til din brukerkonto og profil. Du er
-      også fullt ansvarlig for alle aktiviteter som foregår og deles i
-      forbindelse med din bruker.
-    </p>
-    <h2 id="5">5. Innhold</h2>
-    <p>
-      Nettsiden vår lar deg lage brukere, grupper, laste opp bilder, redigere
-      ulike funksjoner og legge inn kommentarer. Du er selv ansvarlig for å
-      innhente rettigheter i forhold til tekst, bilder, videoer og annen type
-      innhold som du oppgir på nettsiden og i kommentarfeltene. Vi er ikke
-      ansvarlige for tap av data, innhold eller andre direkte eller indirekte
-      tap/skader som oppstår mens du bruker tjenestene våre. Vi har retten til å
-      fjerne, slette eller endre enhver type innhold delt på siden og i
-      kommentarfeltene på nettsiden vår, inkludert brukerkonto, dersom vi har
-      grunn til å tro at innholdet konflikt eller bryter norskloven, bryter våre
-      vilkårene og betingelsene, kan anses som støtende, rasistisk, ærekrenkende
-      , truende, pornografisk eller seksuelt eksplisitt, deling av reklame og
-      annonser, inneholder annonser solgt av tredjeparter som handler på dine
-      vegne eller et nettverk du er medlem av, bryter lover om opphavsrett,
-      inneholder unøyaktige utsagn om enkeltpersoner, bedrifter, enheter, etc.
-      Og til slutt om andre objektive grunner som rettferdiggjør fjerning,
-      sletting eller endring av innholdet. Nettsiden vår er for restauranten å
-      dele sin meny og måltider, en tjeneste for mat og matrelaterte emner. For
-      å opprettholde kvaliteten på tjenesten vil vi holde oss retten til å
-      fjerne innhold og slette brukerprofiler som ikke er relevante for dette
-      formålet. Du må være ekstra forsiktig når du lagrer personlig
-      brukerinnhold på nettstedet. Dette gjelder spesielt for bilder av familie,
-      venner eller enkeltpersoner. Du er fullt ansvarlig for å innhente samtykke
-      fra den som er fotografert og dersom den som er fotografert er mindreårig
-      kreves samtykke fra vergen.
-    </p>
-    <h2 id="6">6. Intellektuelle eiendomsrettigheter</h2>
-    <p>
-      Morild data AS eier og beholder alle immaterielle rettigheter til
-      nettsiden. Enhver bruk av Morild data AS sine tjenester og/eller MatMons,
-      varemerke, logo eller andre karakteristiske merkeelementer er kun tillatt
-      etter skriftlig forhåndsavtale med oss.
-    </p>
-    <h2 id="7">7. Endring av brukerkonto og informasjon</h2>
-    <p>
-      Du kan selv endre eller slette profilen din når som helst når du er
-      pålogget eller ved å kontakte oss på e-post eller tlf.
-    </p>
-    <h2 id="8">8. Ansvarsbegrensning</h2>
-    <p>
-      Morild data BA fraskriver seg alt ansvar som måtte oppstå ved din eller
-      andres bruk av nettsiden. Morild data BA er ikke ansvarlig for innhold
-      gitt av brukere i kommentarfeltet, på nettsiden eller i privatgruppene. Du
-      er ansvarlig for alt innholdet i profilen din og for eventuelle
-      konsekvenser av brukerinnhold. Du godtar at vi kun fungerer som en
-      mellommann for innholds vertstjenesten.
-    </p>
-    <h2 id="9">9. Lovvalg</h2>
-    <p>
-      Disse vilkårene er underlagt norsk lov. Ethvert brudd på disse vilkårene
-      skal henvises til Oslo tingrett som eneste verneting.
+      Dersom du ønsker tilgang til eller har spørsmål angående denne personvernerklæringen, kan du sende disse spørsmålene til vår e-post Kontakt@Matmons.no
+Lær mer om personvernloven og dine rettigheter fra Datatilsynet.
     </p>
   </article>
 </div>
