maga har lakt inn mye bra

--- a/templates/base.html
+++ b/templates/base.html
@@ -109,6 +109,11 @@
               bruk</a
             >
           </li>
+            <li>
+            <a href="{{ url_for('usersroute.instructions_for_use') }}"
+              ><span><i class="uil uil-clipboard-notes"></i></span>Bruksanvisning</a
+            >
+          </li>
         </ul>
       </nav>
     </footer>
