--- a/templates/groups/report.html
+++ b/templates/groups/report.html
@@ -64,7 +64,7 @@
   {% for row in data %}
   <tr class="active-row">
     {% for cell in row %}
-    <td>{{ cell }}</td>
+    <td>{{ cell | trim(",0") | trim(".") }}</td>
     {% endfor %}
   </tr>
   {% endfor %}
