Splittet kode fra calendar_routes.py opp i mindre metoder i calendar_methods.py, og flyttet databasekall til queries.py, grupper identifiseres med navn når deres kalender skal vises

--- a/templates/groups/group.html
+++ b/templates/groups/group.html
@@ -82,7 +82,7 @@
     <div class="group-header flex">
       <ul class="group-nav flex">
         <li>
-          <a href="{{ url_for('calendarroute.show_calendar', group_id = group.id) }}">
+          <a href="{{ url_for('calendarroute.show_calendar', group_name=group.name) }}">
             <span><i class="uil uil-calender"></i>Kalender</span>
           </a>
         </li>
