--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -238,7 +238,7 @@ a {
 .primary-navigation a {
   text-decoration: none;
   font-weight: 00;
-  color: var(--clr-neutral);
+  color: var(--clr-success);
 }
 
 .primary-navigation a:hover {
@@ -476,8 +476,9 @@ a {
   margin: 1em auto;
   border-radius: 10px;
   min-height: 30rem;
-  min-width: 50rem;
+  min-width: clamp(15rem, 12vw + 1rem, 50rem);
 }
+
 
 span input[type="checkbox"] {
   margin-right: 0.5rem;
@@ -511,6 +512,36 @@ span input[type="checkbox"] {
   box-shadow: 7px 7px 60px var(--clr-neutral-900);
   width: 60rem;
   margin: 0 auto;
+}
+
+@media (max-width: 150rem) {
+  .approach-container {
+    position: absolute;
+    padding: 5rem 3rem;
+    left: 0;
+    width: 25rem;
+    text-align: center;
+  }
+}
+
+@media (max-width: 50rem) {
+  .approach-container {
+    position: absolute;
+    padding: 5rem;
+    left: 0;
+    width: 25rem;
+
+  }
+
+  .approach-container h1 {
+    font-size: 1.2em;
+  }
+
+  .control textarea {
+    width: 2rem;
+  }
+  #dinner-approach {
+  }
 }
 
 
@@ -855,7 +886,7 @@ span input[type="checkbox"] {
 .center-modal {
   justify-content: center;
   align-items: center;
-  top: 45%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   transition: all 1s ease;
@@ -864,19 +895,32 @@ span input[type="checkbox"] {
 
 .top-right {
   position: absolute;
-  top: 0%;
-  right: 0%;
+  top: 0;
+  right: 0;
   margin: 1rem;
 }
 
 .settings-modal {
   width: 100%;
-  height: 100%;
+  height: 150vh;
   position: absolute;
   top: 0;
   justify-content: center;
   align-items: center;
 }
+
+   @media (max-width: 100rem) {
+     .top-right {
+       position: absolute;
+       top: 1rem;
+       right: 5rem;
+       margin: 1rem;
+
+     }
+
+  }
+
+
 @keyframes gradient {
   0% {
       background-position: 0% 50%;
@@ -891,7 +935,7 @@ span input[type="checkbox"] {
 
 .profile-modal {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   top: 0;
   justify-content: center;
@@ -1022,6 +1066,7 @@ span input[type="checkbox"] {
      place-self: center;
      transform: scale(150%);
      transition: all .2s;
+     color: var(--clr-primary);
    }
 
    .group-title .edit-group-btn:hover {
@@ -1344,6 +1389,38 @@ span input[type="checkbox"] {
     transform: scale(90%);
   }
 
+  @media (max-width: 50rem) {
+      .ingredient-layout {
+        width: 25rem;
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+
+    }
+
+    .ingredient-title-section h1{
+      max-width: 10rem;
+    }
+
+    .ingredient-article section {
+      display: grid;
+      place-content: center;
+    }
+    .ingredient-container {
+      display: grid;
+    }
+    .ingredient-row {
+      display: grid;
+    }
+
+    .add-ingredient-section {
+      max-width: 25rem;
+    }
+  }
+
 /* ================
    7. Dinner
    ================*/
@@ -1374,7 +1451,7 @@ span input[type="checkbox"] {
    .approach-section {
      display: flex;
      flex-direction: column;
-    padding: 1rem;
+    padding: 2rem;
     margin: 0 auto;
     
    }
@@ -1670,7 +1747,7 @@ span input[type="checkbox"] {
 
 
   /* ==============
-    8. Mikal sin css
+    8. Kalender
     ===============*/
 
     .calendar-main {
@@ -1874,6 +1951,61 @@ span input[type="checkbox"] {
      display: grid;
      place-items: center;
    }
+
+@media (max-width: 50rem) {
+  .calendar-main {
+    margin: 0 auto;
+  }
+  .calendar-grid{
+
+    justify-content: center;
+    justify-items: center;
+
+    grid-template-columns: repeat(1, 17rem);
+
+    margin-top: 5rem;
+
+  }
+
+  .btn-group{
+    min-height: 30vh;
+  }
+
+  .add-dinner-container{
+    grid-template-columns: repeat(1, 15rem);
+
+  }
+
+  .dinner-grid{
+      grid-template-areas:
+     'one one one'
+     'two two two'
+     'five five five'
+     'four four four'
+     'three three three'
+     "six six six"
+     "seven seven seven"
+     "eight eight eight";
+  }
+
+  .add-comment{
+    width: 25rem;
+  }
+
+  .dinner-control{
+    width: 20rem;
+  }
+
+  .dinner-control textarea {
+    width: 18rem;
+  }
+
+  .comment {
+    width: 24rem;
+
+  }
+
+}
 
 
    /* ================
@@ -2377,4 +2509,67 @@ picture {
 .black {
   color: var(--clr-primary);
   padding: 1rem 3rem 1rem 3rem;
+}
+
+@media (max-width: 50rem) {
+  .shopping-container {
+    display: grid;
+    max-width: 25rem;
+    margin: 0;
+    padding: 0;
+  }
+  .report-table{
+    width: 20rem;
+    margin-bottom: 2rem;
+  }
+
+  .shopping-complete{
+    display: grid;
+    width: 20rem;
+    gap: 0;
+    place-items: center;
+  }
+
+  .changed-dinner-grid {
+    width: min(100%, 20rem);
+    margin: 0 auto;
+    grid-template-areas:
+    "one one"
+    "two two"
+    "three three"
+    "four four"
+    "five five";
+  }
+
+  .change-dinner-grid {
+    text-align: center;
+    width: min(100%, 20rem);
+    margin: 0 auto;
+    grid-template-areas:
+    "one"
+    "two"
+    "three"
+    "four"
+    "five";
+  }
+  .approach-section {
+    font-size: 1em;
+    width: 20rem;
+    word-wrap: break-word;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+
+  .approach-section h1 {
+    font-size: var(--fs-300);
+  }
+
+  .add-ingredient-section {
+    width: 20rem;
+  }
+
+  .calendar-nav {
+    margin-top: 4rem;
+  }
 }
