--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
           </li>
           <li>
             <a href="/templates/info/about.html"
-              ><span><i class="uil uil-info-circle"></i></span>Om Mat Mons</a
+              ><span><i class="uil uil-info-circle"></i></span>Om MatMons</a
             >
           </li>
           <li>
@@ -104,9 +104,14 @@
             >
           </li>
           <li>
-            <a href="{{ url_for('usersroute.privacy') }}"
+            <a href="{{ url_for('usersroute.terms_of_use') }}"
               ><span><i class="uil uil-clipboard-notes"></i></span>Vilkår for
               bruk</a
+            >
+          </li>
+            <li>
+            <a href="{{ url_for('usersroute.instructions_for_use') }}"
+              ><span><i class="uil uil-clipboard-notes"></i></span>Bruksanvisning</a
             >
           </li>
         </ul>
