final code with Magnus and Mikal sin code

--- a/templates/dinners/dinner.html
+++ b/templates/dinners/dinner.html
@@ -42,19 +42,19 @@
     </article>
 
     <article class="testimonial">
-
+{% if current_user_role %}
         <div class="dinner-btn-group">
-            {% if current_user_role.role_id != guest_role.id %}
             <a
             href="{{ url_for('recipe_route.show_changes_recipe', dinner_id=dinner_id) }}">
              <button class="button-three">Vis endringer i oppskrift</button>
          </a>
+
          <a
                href="{{ url_for('recipe_route.change_recipe', dinner_id=dinner_id, group_id=group_id) }}">
                 <button class="button-three">Endre oppskrift</button>
             </a>
-            {% endif %}
             </div>
+{% endif %}
 
             {# 5 #}
     </article>
