--- a/templates/groups/group.html
+++ b/templates/groups/group.html
@@ -76,13 +76,13 @@
 
 
   </main>
-
+  {% if current_user_role %}
   <section class="btn-group">
     
     <div class="group-header flex">
       <ul class="group-nav flex">
         <li>
-          <a href="{{ url_for('calendarroute.show_calendar', group_id = group.id) }}">
+          <a href="{{ url_for('calendarroute.show_calendar', group_name=group.name) }}">
             <span><i class="uil uil-calender"></i>Kalender</span>
           </a>
         </li>
@@ -158,7 +158,7 @@
 
 </article>
 
-
+{% endif %}
 
 
 
